--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "gcloud": "git+https://github.com/GoogleCloudPlatform/gcloud-node.git"
+    "gcloud": "^0.6.0"
   }
 }
