--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "gcloud": "^0.6.0"
+    "gcloud": "git+https://github.com/GoogleCloudPlatform/gcloud-node.git",
+    "multiparty": "^3.3.2"
   }
 }
