--- a/public/bower.json
+++ b/public/bower.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "angular": "~1.2.24",
-    "angular-route": "~1.2.24"
+    "angular-route": "~1.2.24",
+    "angular-file-upload": "git@github.com:danialfarid/angular-file-upload.git#~1.6.6"
   }
 }
