--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "gcloud": "git+https://github.com/GoogleCloudPlatform/gcloud-node.git",
+    "gcloud": "git+https://github.com/rakyll/gcloud-node.git#gae",
     "multiparty": "^3.3.2"
   }
 }
